--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -32,3 +32,8 @@ jobs:
       run: |
         pip install pytest
         pytest
+    - name: django
+      run: |
+        pip install django
+        pip install djangorestframework
+        pip install django-countries
